# nBeam

./: readme.md
cef/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  README.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cef.sln  cmake_install.cmake
cef/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
cef/cefclient/: CMakeLists.txt  cefclient.vcxproj  cefclient.vcxproj.filters  cmake_install.cmake
cef/cefclient/Debug/: cefclient.exp
cef/cefclient/cefclient.dir/Debug/: cefclient.res
cef/cefclient/cefclient.dir/Debug/cefclient.tlog/: CL.read.1.tlog  CL.write.1.tlog  cefclient.write.1u.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
cef/cefclient/resources/win/: cefclient.rc
cef/cefsimple/: CMakeCache.txt  cefsimple.vcxproj  cefsimple.vcxproj.filters  cmake_install.cmake
cef/cefsimple/Debug/: cefsimple.exp
cef/cefsimple/cefsimple.dir/Debug/cefsimple.tlog/: CL.read.1.tlog  CL.write.1.tlog  cefsimple.lastbuildstate  cefsimple.write.1u.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
cef/include/: cef_version.h
cef/libcef_dll/: cmake_install.cmake  libcef_dll_wrapper.vcxproj  libcef_dll_wrapper.vcxproj.filters
cef/libcef_dll/libcef_dll_wrapper.dir/Debug/libcef_d.403FEE2E.tlog/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  lib.command.1.tlog
cef/nbeam/: CMakeLists.txt  simple_app.cc
